--- a/plants.html
+++ b/plants.html
@@ -33,9 +33,23 @@
 
     </div>
     </div>
+
     <p>The grid layout divides the entire visible row into 12 equally sized columns. If the sum of columns for any given row exceeds 12, it will be automatically shifted to the next row. And in this case 
         Plants names line breaks first its because we gave col-md as a class and its maximum limit is 768px, so if we go beyond it will break to next row.
     </p>
+
+    <div class="container">
+      <img src="yard long bean .jpg" class="img-fluid" height="350" width="350">
+      <img src="webapps 2.jpg" class="img-fluid" height="350" width="350">
+      <img src="Lavatera.jpg" class="img-fluid"  height="350" width="350"">
+    </div>
+  
+    <div class="container">
+      <img src="yard long bean .jpg" class="img-thumbnail" height="350" width="350">
+      <img src="webapps 2.jpg" class="img-thumbnail" height="350" width="350">
+      <img src="Lavatera.jpg" class="img-thumbnail"  height="350" width="350"">
+    </div>
+  
 
 
 </body>
