--- a/plants.html
+++ b/plants.html
@@ -26,7 +26,7 @@
     <div class="row">
         <div class="col-md-2">YARD BEAN</div>
         <div class="col-md-2">ABELIA</div>
-        <div class="col-md-2">Lavatera</div>
+        <div class="col-md-2">LAVATERA</div>
         <div class="col-md-2">ACACIA</div>
         <div class="col-md-2">MACHILUS</div>
         <div class="col-md-2">ABIES</div>
@@ -49,6 +49,62 @@
       <img src="webapps 2.jpg" class="img-thumbnail" height="350" width="350">
       <img src="Lavatera.jpg" class="img-thumbnail"  height="350" width="350"">
     </div>
+    <table class="table table-striped table-hover table-bordered caption-top caption-top">
+      <caption>Creating a table with bootstrap class table, For the table use heads Letter,Plant,Mountain and Lake. </caption>
+      <thead class="table-dark">
+        <tr>
+          <th scope="col">LETTER</th>
+          <th scope="col">PLANT</th>
+          <th scope="col">MOUNTAIN</th>
+          <th scope="col">LAKE</th>
+        </tr>
+      </thead>
+      <tbody class="table-group-divider">
+        <tr class=" table-danger">
+          <th scope=""row>Y</th>
+          <td>YARD BEAN</td>
+          <td>YARI</td>
+          <td>YAMDROK</td>
+        </tr>
+
+        <tr class="table-info">
+          <th scope=""row>A</th>
+          <td>ABELIA</td>
+          <td>ADAMS</td>
+          <td>ATITLAN</td>
+        </tr>
+
+        <tr class=" table-danger">
+          <th scope=""row>L</th>
+          <td>LAVATERA</td>
+          <td>LINCOLN</td>
+          <td>LEVEN</td>
+        </tr>
+
+        <tr class=" table-info">
+          <th scope=""row>A</th>
+          <td>ACACIA</td>
+          <td>ADISHI</td>
+          <td>AUBRY</td>
+        </tr>
+
+        <tr class=" table-danger">
+          <th scope=""row>M</th>
+          <td>MACHILUS</td>
+          <td>MOCHO</td>
+          <td>MAFU</td>
+        </tr>
+
+        <tr class=" table-info">
+          <th scope=""row>A</th>
+          <td>ABIES</td>
+          <td>ANETO</td>
+          <td>ATLIN</td>
+        </tr>
+        
+      </tbody>
+
+    </table>
   
 
 
