--- a/plants.html
+++ b/plants.html
@@ -101,10 +101,23 @@
           <td>ANETO</td>
           <td>ATLIN</td>
         </tr>
-        
       </tbody>
-
     </table>
+    <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+      <div class="btn-group me-2" role="group" aria-label="First group">
+        <button type="button" class="btn btn-primary">Y</button>
+        <button type="button" class="btn btn-primary">A</button>
+        <button type="button" class="btn btn-primary">L</button>
+      </div>
+
+      <div class="btn-group me-2" role="group" aria-label="Second group">
+        <button type="button" class="btn btn-warning">A</button>
+        <button type="button" class="btn btn-warning">M</button>
+      </div>
+      <div class="btn-group me-2" role="group" aria-label="Thrid group">
+        <button type="button" class="btn btn-danger">A</button>
+     </div>
+    </div>
   
 
 
