added links to plants

--- a/plants.html
+++ b/plants.html
@@ -160,6 +160,34 @@
       </div>
       <button class="btgn btn-primary" type="submit">submit</button>
     </form>  
+    <div class="card-group container">
+    <div class="card" style="width: 18rem;">
+      <img src="yard long bean .jpg" class="card-img-top" >
+      <div class="card-body">
+        <h5 class="card-title">YARD BEAN</h5>
+        <p class="card-text">Yard long beans are fast-growing, high-yielding legumes that every vegetable garden needs. With their impressive size, they easily create a serving of food from just a few beans. If you’ve never eaten this type of bean, they’re just as tasty as green beans and snap peas!</p>
+        <a href="https://minnetonkaorchards.com/yard-long-beans/" class="btn btn-primary">Much info about Yard bean</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="webapps 2.jpg" class="card-img-top" >
+      <div class="card-body">
+        <h5 class="card-title">ABELIA</h5>
+        <p class="card-text"> Abelia is an ornamental shrub that is under-appreciated and underused in many parts of the country and is worth a second look. Grown for its attractive foliage and exceptionally long bloom time, it is virtually maintenance-free once established. </p>
+        <a href="https://www.gardendesign.com/shrubs/abelia.html" class="btn btn-primary">Much info about Abelia</a>
+      </div>
+    </div>
+    <div class="card" style="width: 18rem;">
+      <img src="Lavatera.jpg" class="card-img-top" >
+      <div class="card-body">
+        <h5 class="card-title">LAVATERA</h5>
+        <p class="card-text"> Lavatera is a genus in the mallow plant family that consists of 25 recognized plant species, both perennials and annuals. Like hibiscus, lavatera have large, showy, funnel-shaped flowers with five separate petals. The size varies greatly.</p>
+        <a href="https://www.thespruce.com/lavatera-plant-profile-4800057" class="btn btn-primary">Much info about Lavatera</a>
+      </div>
+    </div>
+    </div>
+    
+    
    
 
 
